--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
 server.port=9898
 
-#spring.jpa.hibernate.ddl-auto=create
-#spring.datasource.url=jdbc:mysql://localhost:3306/db_example
-#spring.datasource.username=springuser
-#spring.datasource.password=ThePassword
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/corocito?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.show-sql=true
+#hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
+
+#Using dialect: org.hibernate.dialect.MySQL5Dialect
